--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>monnig-meteorite-catalog</description>
     <properties>
         <java.version>22</java.version>
+        <spring-cloud-azure.version>5.7.0</spring-cloud-azure.version> <!-- Upgrade to 5.7.0 -->
     </properties>
     <dependencies>
         <dependency>
@@ -60,7 +61,17 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
     </dependencies>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.azure.spring</groupId>
+                <artifactId>spring-cloud-azure-dependencies</artifactId>
+                <version>${spring-cloud-azure.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
